dpf-ax changelog

	by <hackfin@section5.ch>
	Find details in the git or svn logs.

Wed, 11 Jul 2012
v0.314 by superelchi
	* New menuentry 'Setup - Screen Testpattern'
	  for judging lcd alignment/brightness/contrast. 
	* Changed inital backlight value back to maximum.
	* New models:
	  - dx104500 (not finished, may crash on USB connect/disconnect)
	  - abeyerr_black.

Mon, 25 Jun 2012
       by superelchi
        * New model
          - avlabs_avl969s (by ax206geek)

Tue, 19 Jun 2012
       by superelchi
        * Fixed compiler warning in xmenustring.c

Sat, 16 Jun 2012
v0.313 by superelchi
	* Changed startup timing for backlight (keep off until display initialized).
	* Option in Make.config to disable battery checks.
	* Wrong value for dx21334a in config.h fixed.
	* Added debug support (for development only).

Sat, 09 Jun 2012
v0.312 by superelchi
	* Menu colors configurable in Make.config

Mon, 04 Jun 2012
v0.311 by superelchi
	* Backlight control changes.
	* New model:
	  - dx104838

Sat, 02 Jun 2012
v0.310 by superelchi
        * Support for frequency controlled backlight.
	* New models:
	  - dx21334a
	  - dx21334b

Wed, 23 May 2012
v0.301 by superelchi
        * USB serial number adjustable in dpfs menu.
	* New model:
	  - dx27893
	  
Fr, 18 May 2012
v0.300 by superelchi
	* New alternative "disp" firmware for use as status display:
	  - New, bigger font
	  - New menus
	  - User selectabel & dowloadable splashscreen
	  - User config saved to flash.

Mon, 14 May 2012
        by superelchi
        * Modified identify.py for detection of coby firmware.
	* New model:
	  - coby_dp51_white

Mon, 23 Apr 2012
v0.205devel by superelchi
	* Fixed fw compatibility issue with 0.1alpha dpflib (segfault)

Sat, 21 Apr 2012
v0.204devel by superelchi
	* Integration of new models rewritten
	* New models:
	  - agk_violet
	  - focalprice144
	  
Tue, 17 Apr 2012
v0.203devel by superelchi
	* Added hiddetach (crude replacement for libhid-detach-device).